tests/baselines/reference/class2.errors.txt
==== tests/cases/compiler/class2.ts (2 errors) ====
    class foo { constructor() { static f = 3; } }
                                ~~~~~~
!!! error TS1008: Unexpected token; 'statement' expected.
                                                ~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.